--- a/android-todo-list/architecture-samples-main/gradle/libs.versions.toml
+++ b/android-todo-list/architecture-samples-main/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 accompanist = "0.28.0"
+androidSdk = "v4.13.2"
 annotation = "1.5.0"
 androidDesugarJdkLibs = "1.2.2"
 androidGradlePlugin = "7.4.0"
@@ -66,6 +67,7 @@ accompanist-swiperefresh = { group = "com.google.accompanist", name = "accompani
 accompanist-systemuicontroller = { group = "com.google.accompanist", name = "accompanist-systemuicontroller", version.ref = "accompanist" }
 accompanist-testharness = { group = "com.google.accompanist", name = "accompanist-testharness", version.ref = "accompanist" }
 android-desugarJdkLibs = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "androidDesugarJdkLibs" }
+android-sdk = { module = "com.github.statsig-io:android-sdk", version.ref = "androidSdk" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "androidxActivity" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "androidxAppCompat" }
 androidx-archcore-testing = { group = "androidx.arch.core", name = "core-testing", version.ref = "androidxArchCore" }
