typescript conversion related change

--- a/React-Todo-list-main/tsconfig.json
+++ b/React-Todo-list-main/tsconfig.json
@@ -19,6 +19,6 @@
   "exclude": [
       "./plugins/**/*",
       "./typings/**/*",
-      "./built/**/*" // This is what fixed it!
+      "./built/**/*" 
   ]
 }
