--- a/todo/src/main/resources/application.properties
+++ b/todo/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 server.port=8080
+statsig.server.key=secret-F4JPRCLoZVaYNwzQRE1FmqcC124QRuw7ZyxjdAEx7Hv
