--- a/todo/src/main/resources/application.properties
+++ b/todo/src/main/resources/application.properties
@@ -1,14 +1,28 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url= jdbc:mysql://localhost:3306/todo_db
-spring.datasource.username=root
-spring.datasource.password=admin
-spring.jpa.show-sql=true
+#To Support MySql database
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url= jdbc:mysql://localhost:3306/todo_db
+#spring.datasource.username=root
+#spring.datasource.password=admin
+#spring.jpa.show-sql=true
+
 #below properties will automatically creates and updates database schema
 spring.jpa.generate-ddl=true
+
 #spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.hibernate.use-new-id-generator-mappings=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.use-new-id-generator-mappings=false
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+#To Support lightweight database
+spring.datasource.url=jdbc:h2:~/todo_db
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+
 server.port=8080
 statsig.server.key=secret-F4JPRCLoZVaYNwzQRE1FmqcC124QRuw7ZyxjdAEx7Hv
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
