--- a/todo/src/main/resources/application.properties
+++ b/todo/src/main/resources/application.properties
@@ -25,4 +25,4 @@ spring.h2.console.path=/h2-console
 
 server.port=8080
 statsig.server.key=secret-F4JPRCLoZVaYNwzQRE1FmqcC124QRuw7ZyxjdAEx7Hv
-spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.date-format=yyyy-MM-dd'T'HH:mm:ss.SSS'Z'
