--- a/React-Todo-list-main/tsconfig.json
+++ b/React-Todo-list-main/tsconfig.json
@@ -4,6 +4,7 @@
       "outDir": "./built",
       "allowJs": true,
       "target": "es5",
+      "lib": ["dom", "es6"],
       "allowUnreachableCode": false,
       "noImplicitReturns": true,
       "noImplicitAny": true,
