--- a/reactnative_mobile/react_app_todo_list/package.json
+++ b/reactnative_mobile/react_app_todo_list/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "expo": "~49.0.13",
     "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.72.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.14",
+    "@types/react": "^18.2.27",
+    "@types/react-dom": "^18.2.12",
     "@types/react-native": "^0.72.3",
     "typescript": "^5.1.3"
   },
