--- a/reactnative_mobile/react_app_todo_list/package.json
+++ b/reactnative_mobile/react_app_todo_list/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@types/jest": "^29.5.5",
+    "@types/node": "^20.8.6",
     "dotenv": "^16.3.1",
     "expo": "~49.0.13",
     "expo-constants": "^14.4.2",
@@ -16,21 +18,23 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-gesture-handler": "^2.12.0",
     "react-native-get-random-values": "~1.9.0",
     "react-native-restart": "^0.0.27",
     "react-native-uuid": "^2.0.1",
+    "react-native-webview": "^13.2.2",
     "statsig-react": "^1.30.3",
     "statsig-react-native-expo": "^4.6.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "^18.2.27",
-    "@types/react-dom": "^18.2.12",
+    "@types/react": "^18.2.28",
+    "@types/react-dom": "^18.2.13",
     "@types/react-native": "^0.72.3",
     "@types/react-native-dotenv": "^0.2.0",
     "react-native-dotenv": "^3.4.9",
-    "typescript": "^5.1.3"
+    "typescript": "^5.2.2"
   },
   "private": true
 }
