--- a/reactnative_mobile/react_app_todo_list/package.json
+++ b/reactnative_mobile/react_app_todo_list/package.json
@@ -16,6 +16,7 @@
     "expo-constants": "^14.4.2",
     "expo-random": "~13.2.0",
     "expo-status-bar": "~1.6.0",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-gesture-handler": "^2.12.0",
