--- a/Flutter_mobile/sample_todo_app/pubspec.yaml
+++ b/Flutter_mobile/sample_todo_app/pubspec.yaml
@@ -13,16 +13,15 @@ dependencies:
   flutter_riverpod: ^2.3.6
   font_awesome_flutter: ^10.5.0
   go_router: ^10.0.0
-  google_fonts: ^5.1.0
+  google_fonts: 4.0.4
   path: ^1.8.3
   path_provider: ^2.1.0
   sembast: ^3.5.0+1
   shared_preferences: ^2.1.2
   riverpod_lint: ^2.3.2
+  statsig: ^0.4.0
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
   flutter_lints: ^2.0.0
 
 flutter:
