--- a/phptodo/composer.json
+++ b/phptodo/composer.json
@@ -1,10 +1,18 @@
 {
     "name": "statsig/phptodo",
-    "description": "A PHP todo project",
+    "description": "A PHP Todo project",
     "type": "project",
     "require": {
+        "statsig/statsigsdk": "^2.2",
         "doctrine/dbal": "^3.7",
-        "statsig/statsigsdk": "*",
-        "slim/slim": "^2.6"
+        "slim/slim": "4.*",
+        "psr/http-message": "^1.0",
+        "selective/basepath": "*"
+
+    },
+    "autoload": {
+        "psr-4": {
+            "Statsig\\Phptodo\\": "src/"
+        }
     }
 }
