--- a/phptodo/composer.json
+++ b/phptodo/composer.json
@@ -6,6 +6,7 @@
         "statsig/statsigsdk": "^2.2",
         "doctrine/dbal": "^3.7",
         "slim/slim": "4.*",
+        "tuupola/cors-middleware": "*",
         "psr/http-message": "^1.0",
         "selective/basepath": "*"
 
