--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@
 /React-Todo-list-main/.pnp
 /React-Todo-list-main/package-lock.json
 
-
 # testing
 /coverage
 
@@ -22,3 +21,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# express app
+node-express/.env
+node-express/node_modules
+
